--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
     <a href="https://t.me/rinkq1"> 
       <button class="glowing-btn"><span class="glowing-txt">TOOL STORE</span></button> 
     </a> 
-    <a href="https://t.me/rink1"> 
+    <a href="https://t.me/rinkq1"> 
       <button class="glowing-btn"><span class="glowing-txt">ABOUT US</span></button> 
     </a> 
   </div> 
