--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
  <body> 
   <canvas id="matrix"></canvas>
 
-  <img src="https://i.postimg.cc/15NyxP25/enhanced.jpg" class="icon" alt="Icon Image"> 
+  <img src="https://i.postimg.cc/yxhhzwd8/1739890472030.jpg" class="icon" alt="Icon Image"> 
 
   <div class="neon-text">JAHID HASSAN RINKQ..@rinkq2</div>
 
