--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width"> 
   <meta name="title" content="BANGLADESH CYBER 2.0 BEST HACKING TEAM"> 
   <meta name="description" content="we are BANGLADESH CYBER 2.0. WE ARE NOT VILLAINE BRO.."> 
-  <meta property="og:image" content="https://i.postimg.cc/3wPjVf2M/bdc2-0.png"> 
-  <link rel="icon" type="image" href="https://i.postimg.cc/3wPjVf2M/bdc2-0.png"> 
+  <meta property="og:image" content="https://i.postimg.cc/yxhhzwd8/1739890472030.jpg"> 
+  <link rel="icon" type="image" href="https://i.postimg.cc/yxhhzwd8/1739890472030.jpg"> 
   <style>
     @import url("https://fonts.googleapis.com/css?family=Raleway");
 
