--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="language" content="English"> 
   <meta name="theme-color" content="#000"> 
   <meta name="viewport" content="width=device-width"> 
-  <meta name="title" content="BANGLADESH CYBER 2.0 BEST HACKING TEAM"> 
-  <meta name="description" content="we are BANGLADESH CYBER 2.0. WE ARE NOT VILLAINE BRO.."> 
+  <meta name="title" content="MD.JAHID HASSAN RINKQ"> 
+  <meta name="description" content="I'M A MUSLIM.."> 
   <meta property="og:image" content="https://i.postimg.cc/yxhhzwd8/1739890472030.jpg"> 
   <link rel="icon" type="image" href="https://i.postimg.cc/yxhhzwd8/1739890472030.jpg"> 
   <style>
