--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html> 
  <head>
-  <title>BANGLADESH CYBER 2.0</title> 
+  <title>MD.JAHID HASSAN RINKQ</title> 
   <meta name="language" content="English"> 
   <meta name="theme-color" content="#000"> 
   <meta name="viewport" content="width=device-width"> 
